<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    android:orientation="vertical">

    <Button
        android:id="@+id/commit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/selecter_bottom_btn"
        android:text="@string/bottom_commit"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/commit"
        android:background="@color/lightgray" />

    <Button
        android:id="@+id/roll_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/line"
        android:background="@drawable/selecter_bottom_btn"
        android:text="@string/bottom_roll_back"
        android:textColor="@color/red"
        android:textSize="18sp" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@+id/roll_back"
        android:layout_marginTop="@dimen/common_dp"
        android:background="@color/lightgray" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/line1"
        android:background="@drawable/selecter_bottom_btn"
        android:text="@string/bottom_cancel"
        android:textColor="@color/black"
        android:textSize="18sp" />

</RelativeLayout>
