<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/user_center" />

    <View style="@style/DetailViewStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundcolor"
        android:orientation="horizontal"
        android:padding="@dimen/common_dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:gravity="center"
            android:text="账户"
            android:textColor="@color/heixiang"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/common_dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/hint_username"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="17sp" />

    </LinearLayout>

    <View style="@style/DetailViewStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundcolor"
        android:orientation="horizontal"
        android:padding="@dimen/common_dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:gravity="center"
            android:text="密码"
            android:textColor="@color/heixiang"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/loginPwd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/hint_pwd"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="17sp" />
    </LinearLayout>

    <View style="@style/DetailViewStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/common_dp">

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/selecter_bg_blue_btn"
            android:text="@string/go_login"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/url_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_dp"
        android:background="@null"
        android:text="@string/url_config"
        android:textColor="@color/btn_blue"
        android:textSize="15sp" />

</LinearLayout>
