<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/lightgray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/tab_home_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/tab_home_badge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/tab_home_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#0000"
                    android:src="@drawable/tab_home" />

                <TextView
                    android:id="@+id/tab_home_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tab_home_bottom"
                    android:textColor="@color/gray"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_msg_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/tab_msg_badge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/tab_msg_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#0000"
                    android:src="@drawable/tab_msg" />

                <TextView
                    android:id="@+id/tab_msg_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tab_msg_bottom"
                    android:textColor="@color/gray"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_menu_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/tab_menu_badge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/tab_menu_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#0000"
                    android:src="@drawable/tab_menu" />

                <TextView
                    android:id="@+id/tab_menu_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tab_menu_bottom"
                    android:textColor="@color/gray"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_me_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/tab_me_badge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/tab_me_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#0000"
                    android:src="@drawable/tab_me" />

                <TextView
                    android:id="@+id/tab_me_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tab_me_bottom"
                    android:textColor="@color/gray"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>